--- a/17/HW17_Shoes_page/Shoes.css
+++ b/17/HW17_Shoes_page/Shoes.css
@@ -20,6 +20,7 @@ body {
     max-width: 1600px;
     background-color: #fff;
     margin: 0 auto;
+
 }
 
 .desktop {
@@ -28,6 +29,10 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+}
+
+.menu-bar {
+    display: none;
 }
 
 .link-nav>a {
@@ -93,11 +98,6 @@ body {
     margin-left: 50px;
 }
 
-/* .img-block {
-    max-width: 1500px;
-    margin-top: -55px;
-} */
-
 .menu-bar {
     margin-left: 24px;
     width: 50px;
@@ -113,32 +113,25 @@ body {
 
 .desktop-img-text {
     max-width: 1500px;
-    /* height: 540px; */
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-end;
     margin-left: 24px;
     margin: 55px 0;
 }
-.img-block{
+
+.img-block {
     max-width: 1500px;
     display: flex;
     overflow: hidden;
 }
+
 .shoes-logo-img1 {
-    /* width: 30%; */
-    /* display: inline-block; */
     position: relative;
-    /* top: 50px;
-    margin-left: 72px; */
 }
 
 .shoes-logo-img2 {
-    /* width: 30%; */
-    /* display: inline-block; */
     position: relative;
-    /* left: 176px;
-    top: 44px; */
 }
 
 .text-block {
@@ -194,26 +187,22 @@ h1 {
 }
 
 .shop-now {
-    max-width: 1500px;
-    /* height: 455px; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* margin-left: 24px; */
     position: relative;
     z-index: 1;
     margin-bottom: 62px;
 }
 
 .img-block1 {
-    /* max-width: 45%; */
     position: relative;
 }
 
 .img-block1 .woman {
     position: absolute;
     z-index: 2;
-top: 20px;
+    top: 20px;
     left: 20px;
     font-weight: 800;
     font-size: 40px;
@@ -224,7 +213,7 @@ top: 20px;
 .img-block1>a {
     position: absolute;
     bottom: 20px;
-    right: 6px;
+    right: 34px;
     font-weight: 500;
     font-size: 18px;
     line-height: 156%;
@@ -236,7 +225,6 @@ top: 20px;
 }
 
 .img-block2 {
-    /* max-width: 45%; */
     position: relative;
 }
 
@@ -284,9 +272,6 @@ h3 {
     margin-left: 24px;
     margin-bottom: 35px;
 }
-
-
-
 
 .new-release {
     display: flex;
@@ -339,7 +324,6 @@ h3 {
     max-width: 88%;
     display: flex;
     flex-direction: column;
-
     align-items: center;
     margin-left: 25px;
     margin-top: 28px;
@@ -386,7 +370,6 @@ h3 {
 }
 
 footer {
-    /* height: 435px; */
     background-color: #000;
 }
 
@@ -475,6 +458,7 @@ h5 {
         justify-content: center;
 
     }
+
     .text-block {
         text-align: center;
         align-items: center;
@@ -488,10 +472,12 @@ h5 {
     p {
         align-items: center;
     }
+
     .img-block1>a {
-    position: absolute;
-    bottom: 38px;
-    left: 20px;}
+        position: absolute;
+        bottom: 38px;
+        left: 20px;
+    }
 
 
     .text-block>#shop-button {
@@ -500,7 +486,7 @@ h5 {
         align-items: center;
         text-align: center;
         margin: 34px auto 40px;
-          }
+    }
 
     .shop-now {
         display: flex;
@@ -509,10 +495,11 @@ h5 {
         margin-bottom: 40px;
         margin-left: 24px;
     }
-    .img-block1>img{
+
+    .img-block1>img {
         margin-bottom: 20px;
     }
-       }
+}
 
 @media(max-width:800px) {
 
@@ -523,47 +510,65 @@ h5 {
     .desktop>.link-nav {
         display: none;
     }
-    .img-block{
+
+    .img-block {
         min-height: 250px;
         justify-content: center;
         /* overflow: hidden; */
     }
+
     .shoes-logo-img1>img {
         width: 400px;
         display: flex;
         position: relative;
         top: 0px;
-    margin-left: 92px;
+        margin-left: 92px;
     }
+
     .shoes-logo-img2>img {
         width: 350px;
         display: flex;
         position: relative;
         left: 11px;
-    top: 0px;
-    /* rotate: -25deg; */
+        top: 0px;
+        /* rotate: -25deg; */
     }
 
     .shop-now {
         max-width: 800px;
         flex-direction: column;
     }
-    .img-block1 img{
+
+    .img-block1 img {
         width: 100%;
     }
-    .img-block2 img{
+
+    .img-block2 img {
         width: 100%;
     }
-    .footer-content{
+
+    .footer-content {
         display: flex;
         flex-wrap: wrap;
         /* flex-direction: column; */
         justify-content: space-around;
     }
-    
-    @media (max-width:450px){
-        .logo{
+
+    @media (max-width:450px) {
+        .logo {
             margin-left: 0px;
         }
+
+        .content-container {
+            overflow-y: none;
+        }
+
+        .menu-bar {
+            display: flex;
+            margin-left: 24px;
+            width: 50px;
+            height: 24px;
+            margin-right: 20px;
+            text-decoration: none;
+        }
     }
-}
