--- a/18/HW18/travel.css
+++ b/18/HW18/travel.css
@@ -10,6 +10,7 @@
 
 /* desktop */
 body {
+    max-width: 1500px;
     background-color: #F8FAF8;
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
@@ -21,6 +22,7 @@ body {
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
     background-position: center right;
+
     position: relative;
     z-index: -1;
 
@@ -37,7 +39,7 @@ body {
 
 .content-container {
     /* margin-left: 120px;*/
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     margin-left: 120px;
 }
@@ -158,7 +160,8 @@ p {
 }
 
 .select-destinations {
-    width: 95%;
+    width: 100%;
+    position: relative;
     height: 100px;
     background-color: #386E41;
     color: #fff;
@@ -206,6 +209,8 @@ option {
 }
 
 .see-options {
+    position: relative;
+    width: 100%;
     /* width: 140px; */
     height: 60px;
     display: flex;
@@ -215,7 +220,14 @@ option {
     margin-bottom: 40px;
 }
 
-.see-options>h3 {
+/* .see-options>*/
+h3 {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 14px;
+}
+
+.PP {
     text-align: center;
     margin: 0 auto;
     margin-top: 14px;
@@ -233,9 +245,9 @@ option {
         width: 60%;
     }
 
-    .see-options {
-        width: 130%;
-    }
+    /* .see-options { */
+    /* width: 130%; */
+    /* } */
 
 }
 
@@ -248,13 +260,13 @@ option {
     }
 
     .main-section {
-        width: 30%;
+        width: 100%;
         margin-bottom: 40px;
     }
 
     .select-destinations {
-        width: 30%;
-        flex-direction: column;
+        width: 100%;
+        /* flex-direction: column; */
         flex-wrap: wrap;
         padding-bottom: 3px;
     }
@@ -265,6 +277,10 @@ option {
         padding-left: 3px;
         margin-bottom: 120px;
     }
+
+    /* .see-options{
+        justify-content: left;
+    } */
 
     p {
         color: #151515;
@@ -278,5 +294,18 @@ option {
 
     .select-section>h3 {
         color: #151515;
+    }
+}
+
+@media(min-width: 1500px) {
+    body {
+        background-position: center right;
+
+    }
+}
+
+@media(min-width: 1800px) {
+    body {
+        background-position: center center;
     }
 }
