--- a/17/HW17_Shoes_page/Shoes.css
+++ b/17/HW17_Shoes_page/Shoes.css
@@ -389,11 +389,11 @@ p {
 }
 
 .footer-content {
-    width: 100%;
+    width: 70%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    /* justify-content: space-between; */
+    /* flex-wrap: wrap; */
+    justify-content: space-between;
     margin-bottom: 100px;
 }
 
@@ -420,8 +420,18 @@ p {
 
 .follow-block {
     margin-top: 63px;
-    margin-left: 24px;
+    margin-right: 32px;
+  
 }
+.footer-flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: baseline;
+}
+
+
 
 .label {
     width: 21px;
