--- a/17/HW17_Shoes_page/Shoes.css
+++ b/17/HW17_Shoes_page/Shoes.css
@@ -24,7 +24,7 @@ body {
 }
 
 .desktop {
-    width: 35%;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -69,7 +69,7 @@ body {
     justify-content: baseline;
     padding-top: 46px;
     padding-bottom: 150px;
-    margin-left: 24px;
+    /* margin-left: 24px; */
 }
 
 .header-search-basket>a {
@@ -95,7 +95,7 @@ body {
     width: 163px;
     height: 42px;
     background-color: #000;
-    margin-left: 50px;
+    margin-left: 30px;
 }
 
 .menu-bar {
