--- a/18/HW18/travel.css
+++ b/18/HW18/travel.css
@@ -10,18 +10,18 @@
 
 /* desktop */
 body {
-    max-width: 1500px;
+    /* max-width: 1500px; */
     background-color: #F8FAF8;
-    font-family: "Open Sans", sans-serif;
+    /* font-family: "Open Sans", sans-serif; */
     font-optical-sizing: auto;
-    font-style: normal;
+    /* font-style: normal; */
     font-family: "Marmelad", sans-serif;
     font-weight: 400;
     font-style: normal;
     background-image: url(Image\ \(1\).png);
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
-    background-position: center right;
+    background-position: center;
 
     position: relative;
     z-index: -1;
@@ -38,9 +38,7 @@ body {
 }
 
 .content-container {
-    /* margin-left: 120px;*/
     max-width: 1200px;
-    margin: 0 auto;
     margin-left: 120px;
 }
 
@@ -63,7 +61,7 @@ body {
 
 .nav-menu {
     /* width: px; */
-    height: 40px;
+    /* height: 40px; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -129,24 +127,16 @@ span {
     margin-right: 20px;
 }
 
-/* .img-block { */
-/* width: 820px;
-    height: 820px;
-    display: flex;
-    position: relative;
-    top: 115px;
-    right: 0px;
-    overflow: hidden;
-    z-index: -1; */
-/* } */
-
 .select-section {
     width: 21%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 35px;
-    /* align-items: center; */
+}
+
+.select-section>img {
+    padding-top: 12px;
 }
 
 h3 {
@@ -172,7 +162,6 @@ p {
     align-items: center;
     margin-bottom: 72px;
     border-radius: 8px;
-
 }
 
 #search {
@@ -204,14 +193,12 @@ option {
 
 #search:hover {
     cursor: pointer;
-    /* background-color: antiquewhite; */
     opacity: 0.8;
 }
 
 .see-options {
     position: relative;
     width: 100%;
-    /* width: 140px; */
     height: 60px;
     display: flex;
     flex-direction: column;
@@ -233,6 +220,19 @@ h3 {
     margin-top: 14px;
 }
 
+@media(max-width:1500px) {
+    .text-block {
+        background-color: #c4d7de5f;
+    }
+
+    /* .select-section{
+        background-color: #c4d7de5f; */
+}
+
+p {
+    color: #151515;
+}
+}
 
 @media(max-width:860px) {
     .header-group {
@@ -245,18 +245,31 @@ h3 {
         width: 60%;
     }
 
-    /* .see-options { */
-    /* width: 130%; */
-    /* } */
-
 }
 
 @media(max-width:700px) {
+    body {
+        background-size: 80%;
+    }
+
+    .header-group {
+        flex-direction: column;
+        align-items: baseline;
+    }
+
     .nav-menu {
         flex-direction: column;
         justify-content: space-around;
         align-items: baseline;
         margin-bottom: 12px;
+    }
+
+    .nav-menu>a {
+        margin-bottom: 8px;
+    }
+
+    .logo {
+        margin-bottom: 10px;
     }
 
     .main-section {
@@ -266,29 +279,20 @@ h3 {
 
     .select-destinations {
         width: 100%;
-        /* flex-direction: column; */
         flex-wrap: wrap;
         padding-bottom: 3px;
     }
 
     .text-block {
-        background-color: #c4d7de5f;
         opacity: 0.9;
         padding-left: 3px;
         margin-bottom: 120px;
     }
 
-    /* .see-options{
-        justify-content: left;
-    } */
-
-    p {
-        color: #151515;
-    }
-
     .select-section {
         background-color: #c4d7de5f;
         opacity: 0.9;
+        width: 50%;
 
     }
 
@@ -300,12 +304,5 @@ h3 {
 @media(min-width: 1500px) {
     body {
         background-position: center right;
-
-    }
-}
-
-@media(min-width: 1800px) {
-    body {
-        background-position: center center;
     }
 }
