--- a/20/HW20/hw.scss
+++ b/20/HW20/hw.scss
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Marmelad&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -13,8 +14,10 @@
     --secondaruColor: #7a7a7a;
     --additionalClolr: #c4d7de5f;
     --base-font-size: 18px;
+    --secodary-font-size: 36px;
     --specialColor: #bc436a;
     --main-font-family: "Marmelad", sans-serif;
+    --second-family: "Open Sans", sans-serif;
     --ColorBG: #F8FAF8;
     --additionalColor: #386e41;
 }
@@ -155,12 +158,19 @@ h1 {
     font-size: 2 rem;
     color: var(--mainColor);
     margin-bottom: 2 rem;
+    font-family: var(--main-font-family);
+    span{
+        font-family: var(--main-font-family);
+        color: var(--specialColor);
+        font-size: var(--secodary-font-size);
+    }
 }
 
 p {
     font-weight: 400;
     font-size: 20px;
     color: var(--secondaruColor);
+    font-family: var(--second-family);
     @media(max-width: 1400px)
      {
         color: #151515;
